updated mobile menu, fixed about us image on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -1636,10 +1636,14 @@ mark,
   width: 100%;
   top: 0;
   left: 0;
+  opacity: 0;
+  transition: 0.125s ease;
   visibility: hidden;
   --nav-spacing: 18px;
 }
 .nav.open {
+  transition: 0.125s ease;
+  opacity: 100;
   visibility: visible;
 }
 .nav__list {
@@ -2017,18 +2021,28 @@ p {
 .side-line {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 @media (min-width: 875px) {
   .side-line {
     width: 45%;
+    justify-content: flex-end;
   }
 }
 .side-line img {
-  max-height: 70vh;
+  max-height: 40vh;
   max-width: 100%;
   background-color: white;
   box-shadow: -1rem 0rem #F24C4C;
+  transition: 0.125s ease all;
+  margin-top: 2rem;
+}
+@media (min-width: 875px) {
+  .side-line img {
+    margin-top: 0;
+    max-height: 70vh;
+    transition: 0.125s ease all;
+  }
 }
 
 .footer {
@@ -2722,7 +2736,7 @@ html {
 }
 
 .team {
-  height: 80vh;
+  max-height: fit-content;
 }
 .team h1, .team h2, .team h3, .team h4, .team p, .team a {
   color: black;
@@ -2746,6 +2760,7 @@ html {
 .team--video div video {
   margin: auto;
   width: fit-content;
+  max-width: 100%;
 }
 @media (min-width: 875px) {
   .team--work {
