--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -226,14 +226,23 @@ p {
 .side-line {
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 @media (min-width: 875px) {
     width: 45%;
+    justify-content: flex-end;
 }
     img {
-        max-height: 70vh;
+        max-height: 40vh;
         max-width: 100%;
         background-color: white;
         box-shadow: -1rem 0rem $Rood;
+        transition: 0.125s ease all;
+        margin-top: 2rem;
+        @media (min-width: 875px) {
+        margin-top: 0;
+
+        max-height: 70vh;
+        transition: 0.125s ease all;
+        }
     }
 }
